# web_automation_by_pytest

./: .pep8  .pre-commit-config.yaml  .pylintrc  conftest.py  pylenium.json  pyproject.toml  pytest.ini  requirements.txt  test.py
ci/: run_lambdatest.sh
src/: conftest.py
src/framework/: argument_parser.py
src/pages/: basePage.py  form.py  todo.py  todo_selenium.py
src/tests/: test_example.py  test_lambdatest.py  test_todo.py
src/types/: type.py
tests/: test_example.py
